--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,8 +41,8 @@
     iusto?</p>
   <hr class="my-4">
   <div class = "row justify-content-around">
-  <a class="btn btn-primary btn-lg" href="#" role="button">Find a Freelancer</a>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Become a Freelancer</a>
+  <a class="btn btn-primary btn-lg col-5" href="#" role="button">Find a Freelancer</a>
+  <a class="btn btn-primary btn-lg col-5" href="/form" role="button">Become a Freelancer</a>
   </div>
 </div>
 </div>
