--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,6 +1,6 @@
 <div class="container d-flex min-vh-100 justify-content-center align-items-center">
     <div class="jumbotron text-center">
-        <h1 class="display-4">Add yourself as a Freelancer!</h1>
+        <h1 class="display-4">Add Yourself as a Freelancer!</h1>
         <hr class="my-5">
         <form>
             <div class="row justify-content-center">
@@ -25,7 +25,7 @@
             </div>
             <div class="row">
                 <div class="form-group col-lg">
-                    <label for="emailInput">Email address</label>
+                    <label for="emailInput">Email Address</label>
                     <input type="email" class="form-control text-center" id="emailInput" aria-describedby="emailHelp"
                         placeholder="Email Address">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <button type="submit" class="btn btn-primary col-4 mt-3">Submit</button>
+                <button type="submit" id="submitFreelancer" class="btn btn-primary col-4 mt-3">Submit</button>
             </div>
         </form>
     </div>
