--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<div class="text-center jumbotron">
+<div class="text-center jumbotron back">
   <h1 class="display-4">Welcome to Freelancers!</h1>
   <br>
   <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt harum debitis velit repellendus,
