--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,5 +1,5 @@
 <div class="container d-flex min-vh-100 justify-content-center align-items-center">
-    <div class="jumbotron text-center">
+    <div class="jumbotron text-center back">
         <h1 class="display-4">Add Yourself as a Freelancer!</h1>
         <hr class="my-5">
         <form>
