--- a/views/table.handlebars
+++ b/views/table.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center">
+<div class="jumbotron text-center back">
     <h1 class="display-4">Freelancers!</h1>
     <hr class="my-4">
     <table class="table">
