--- a/public/CSS/stylez.css
+++ b/public/CSS/stylez.css
@@ -3,5 +3,6 @@ body {
 }
 
 .back{
-  background-color:rgba(255,255,255, .7)
+  background-color:rgba(255,255,255, .7);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
