created click event to pull info from form

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -6,7 +6,7 @@
             <div class="row justify-content-center">
                 <div class="form-group col-6">
                     <label for="nameInput">Name</label>
-                    <input type="name" class="form-control text-center" id="firstNameInput" placeholder="Name">
+                    <input type="name" class="form-control text-center" id="nameInput" placeholder="Name">
                 </div>
                 <div class="form-group col-6">
                     <label for="locationInput">Location</label>
