--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class="text-center jumbotron back">
-  <h1 class="display-4">Welcome to Freelancers!</h1>
+  <h1 class="display-4 animated fadeInUp">Welcome to Freelancers!</h1>
   <br>
   <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt harum debitis velit repellendus,
     ullam ducimus commodi possimus eos maxime ipsum quaerat nobis pariatur fugit ab. Quia, vel. Optio, accusantium
