Updated front page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,8 @@
 <div class="text-center jumbotron back">
   <h1 class="display-4">Welcome to Freelancers!</h1>
   <br>
-  <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt harum debitis velit repellendus,
-    ullam ducimus commodi possimus eos maxime ipsum quaerat nobis pariatur fugit ab. Quia, vel. Optio, accusantium
-    iusto?</p>
+  <p class="lead">Got skills? We'll pay your bills. Connecting you to the expertise that gets the job done. 
+  </p>
   <hr class="my-4">
   <div class = "row justify-content-around">
   <a class="btn btn-primary btn-lg col-5" href="/table" role="button">Find a Freelancer</a>
