--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
     iusto?</p>
   <hr class="my-4">
   <div class = "row justify-content-around">
-  <a class="btn btn-primary btn-lg col-5" href="/table" role="button">Find a Freelancer</a>
-  <a class="btn btn-primary btn-lg col-5" href="/form" role="button">Become a Freelancer</a>
+  <a class="btn btn-primary btn-lg col-5 animated jackInTheBox" href="/table" role="button">Find a Freelancer</a>
+  <a class="btn btn-primary btn-lg col-5 animated jackInTheBox" href="/form" role="button">Become a Freelancer</a>
   </div>
 </div>
