--- a/views/table.handlebars
+++ b/views/table.handlebars
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center back">
-    <h1 class="display-4">Freelancers!</h1>
+    <h1 class="display-4 animated fadeInUp">Freelancers!</h1>
     {{!-- <div class="input-group mb-3">
         <div class="input-group-prepend">
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"
@@ -12,9 +12,9 @@
         <input type="text" class="form-control" aria-label="Text input with dropdown button">
     </div> --}}
     <hr class="my-4">
-    <table class="table table-hover">
+    <table class="table table-hover ">
         <thead class="thead-dark">
-            <tr>
+            <tr class= "animated fadeInUp">
                 <th scope="col">Freelancer</th>
                 <th scope="col">Name</th>
                 <th scope="col">Position/Trade</th>
@@ -25,7 +25,7 @@
         </thead>
         <tbody>
             {{#each freelancers}}
-            <tr>
+            <tr class= "animated fadeInUp" >
                 <th scope="row">{{this.id}}</th>
                 <td>{{this.name}}</td>
                 <td>{{this.position}}</td>
